@@ -72,6 +72,7 @@ struct usbredirparser_priv {
     int data_read;
     int to_skip;
     struct usbredirparser_buf *write_buf;
+    int write_buf_count;
 };
 
 static void
@@ -117,6 +118,7 @@ static void serialize_test(struct usbredirparser *parser_pub)
         wbuf = next_wbuf;
     }
     parser->write_buf = NULL;
+    parser->write_buf_count = 0;
 
     free(parser->data);
     parser->data = NULL;
@@ -839,7 +841,7 @@ int usbredirparser_has_data_to_write(struct usbredirparser *parser_pub)
 {
     struct usbredirparser_priv *parser =
         (struct usbredirparser_priv *)parser_pub;
-    return parser->write_buf != NULL;
+    return parser->write_buf_count;
 }
 
 int usbredirparser_do_write(struct usbredirparser *parser_pub)
@@ -874,6 +876,7 @@ int usbredirparser_do_write(struct usbredirparser *parser_pub)
             if (!(parser->flags & usbredirparser_fl_write_cb_owns_buffer))
                 free(wbuf->buf);
             free(wbuf);
+            parser->write_buf_count--;
         }
     }
     UNLOCK(parser);
@@ -944,13 +947,14 @@ static void usbredirparser_queue(struct usbredirparser *parser_pub,
     if (!parser->write_buf) {
         parser->write_buf = new_wbuf;
     } else {
-        /* maybe we should limit the write_buf stack depth ? */
+        /* limiting the write_buf's stack depth is our users responsibility */
         wbuf = parser->write_buf;
         while (wbuf->next)
             wbuf = wbuf->next;
 
         wbuf->next = new_wbuf;
     }
+    parser->write_buf_count++;
     UNLOCK(parser);
 }
 
