@@ -1,3 +1,12 @@
+usbredir-0.5.1 17 September 2012
+--------------------------------
+-usbredirparser:
+ -usbredirparser_has_data_to_write now returns the write queue depth, instead
+  of only 0 or 1
+-usbredirhost:
+ -usbredirhost_has_data_to_write now returns the write queue depth, instead
+  of only 0 or 1
+
 usbredir-0.5   7 September 2012
 -------------------------------
 -Windows support 
